# py-parsing

./: .gitignore  CLAUDE.md  README.md  category-sitemap.xml  domains.txt  downloader.py  index.html  index.xml  main.py  page-sitemap.xml  post-sitemap.xml  py-parsing.py  pyproject.toml  requirements.txt  scrapping.py  sitemap_urls.txt
classes/: FilesHandle.py  HtmlDownloader.py  HtmlLinksParser.py  Menu.py  MySelenium.py  MyTable.py  Select.py  SiteUrlsFile.py  SitemapParser.py
csv/: 0_Баранина_и_дичь.csv  10_Напитки_алкогольные.csv  11_Овощи_и_зелень.csv  12_Орехи_и_семена.csv  16_Рыба_и_морепродукты.csv  17_Свинина.csv  21_Травы__специи_и_соусы.csv  24_Хлеб_и_выпечка.csv  3_Говядина_и_телятина.csv  45_Ашан.csv  4_Грибы.csv  5_Детское_питание.csv  6_Жиры_и_масла.csv  8_Крупы__мука__макароны.csv  9_Молочные_продукты.csv
html/: 0_Баранина_и_дичь.html  10_Напитки_алкогольные.html  11_Овощи_и_зелень.html  12_Орехи_и_семена.html  13_Полуфабрикаты.html  14_Птица.html  15_Ресторанная_еда.html  16_Рыба_и_морепродукты.html  17_Свинина.html  18_Снеки.html  19_Соки.html  1_Баранина_и_дичь.html  1_Бобовые.html  20_Сосиски_и_колбаса.html  21_Травы__специи_и_соусы.html  22_Фаст_фуд.html  23_Фрукты_и_ягоды.html  24_Хлеб_и_выпечка.html  25_Яйца_и_продукты_из_яиц.html  26_Варенье_и_джемы.html  27_Вторые_блюда.html  28_Выпечка.html  29_Гарниры.html  2_Бобовые.html  2_Вода_и_напитки.html  30_Десерты.html  31_Заготовки.html  32_Закуски.html  33_Каши.html  34_Напитки.html  35_Первые_блюда.html  36_Салаты.html  37_Соусы_и_заправки.html  38_Campina.html  39_Coca_Cola.html  40_Danone.html  (+25 more)
(+22 files in other folders)
