[project]
name = "py-parsing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "bs4>=0.0.2",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "simple-term-menu>=1.6.6",
    "types-requests>=2.32.4.20260107",
]
